# Multi-Core-architecture-comparision

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
TheProject/: CMakeLists.txt
TheProject/src/: common.hxx  logging.hxx  main.cpp  manager.hxx
TheProject/src/models/: ModelInterface.hxx  Model_DedicatedThreads.hxx  Model_MasterWorkerContract.hxx  Model_OurPipelining.hxx  source.cpp
log/: model_dedicatedThreads_run1_threads11.txt  model_dedicatedThreads_run1_threads7.txt  model_dedicatedThreads_run1_threads9.txt  model_masterWorkerContract_run1_threads11.txt  model_masterWorkerContract_run1_threads7.txt  model_masterWorkerContract_run1_threads9.txt  model_ourPipeline_run1_threads11.txt  model_ourPipeline_run1_threads7.txt  model_ourPipeline_run1_threads9.txt
